encrypted the password and created the cookie for the user

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 7000
 MONGO_URI = 'mongodb+srv://dineshkumarsahoo2025:vE3THDeP6kiDyccA@cluster0.vnfo6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
-
+JWT_SECRET = abcblablabla
+NODE_ENV = development
